Makes AshTestHelper shutdown ChromeOS NetworkHandler

Classic ash unittests don't run with the NetworkHandler running. To
run with the NetworkHandler triggers additional items on the tray,
which tests are not setup to deal correctly with.

BUG=695751,696769
TEST=test only changes
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2772513003
Cr-Commit-Position: refs/heads/master@{#458927}

Former-commit-id: eeccd7ee07f0c25c2de9b9ab4c176ac0b3441e69